2008-08-01  Hans Breuer  <hans@breuer.org>

	* makefile.msc : add gemblembedicon

2008-07-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 545457 – gdmsetup crashed with SIGSEGV in
	g_unix_mount_guess_should_display()

	* gunixvolumemonitor.c (get_mount_for_mount_path): Don't 
	crash if no mount is found.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 545203 – gfile.c: argument is different type.

	* gfile.c (open_read_async_thread): Pass a GError **
	to g_file_set_error_literal.
	Reported by Kazuki Iwamoto

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 545157 – wrong/no list of "open with" applications for .cc and
	.cpp files

	* gdesktopappinfo.c (get_all_desktop_entries_for_mime_type):
	Collect all ancestors, not just direct parents. Pointed
	out by Bastien Nocera

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Install gemblemedicon.h

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* gemblemedicon.[hc]: Add a GIcon implementation that can
	add an emblem to another icon.

	* gio.h:
	* Makefile.am:
	* gio.symbols: Glue

	* gloadableicon.c:
	* gfileicon.c: Small documentation additions.

2008-07-28  Tor Lillqvist  <tml@novell.com>

	* gwin32appinfo.c (g_win32_app_info_get_icon): Correct return
	type.

2008-07-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (gio-2.0.lib): Pass appropriate -machine flag to lib.exe.

2008-07-24  David Zeuthen  <davidz@redhat.com>

	* gmount.[ch]:
	* gio.symbols:
	Also export a g_mount_guess_content_type_sync() function.

2008-07-23  Matthias Clasen  <mclasen@redhat.com>

	529694 – SELinux context setting support

	* gfileinfo.c: Support setting selinux attributes.
	Patch by Tomas Bzatek

2008-07-22  Priit Laes <plaes@plaes.org>

	Bug 544140 - fam-helper 64-bit issue?

	* fam/fam-helper.c: Added missing include so compiler doesn't complain.

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.4 ===

2008-07-20  Matthias Clasen  <mclasen@redhat.com>
